Bug 406939 - Conversion HDR file to exr changes the color profile
Summary: Conversion HDR file to exr changes the color profile
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: HDR (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-26 22:19 UTC by Tiar
Modified: 2019-05-01 13:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-04-26 22:19:02 UTC
SUMMARY
When you save the file with color profile Rec2020-elle-g10 as .exr file, after opening the .exr file in Krita you can see a different color profile (sRGB-elle-g10) and different colors.

STEPS TO REPRODUCE
1. Take the attached file and open in Krita.
2. Save as .exr file.
3. Open the .exr file.

OBSERVED RESULT
Color are different, color space is wrong.

EXPECTED RESULT
Colors are the same, color space is the same (or different, but converted that way that colors looks very similar).

NOTES
- If you assign a correct (Rec2020) color profile to the result .exr, the colors will be ok, which means the values are the same as they should, just the color profile is assigned wrongly.
- If you take the original .kra file and convert to sRGB 16bit/float, the colors will look mostly correct. (Would also look very HDR-y, no idea if this is expected or related).


SOFTWARE/OS VERSIONS
Krita version: 4.2.0-pre-alpha (git fb08951)
Windows: 10
Qt Version: 5.12.2
Comment 1 Halla Rempt 2019-05-01 13:31:09 UTC
EXR files don't store color profiles. In fact, color profiles are completely irrelevant for a HDR workflow: the colors are managed using the LUT docker. But because images cannot exist in krita without an associated icc profile, we pick the linear gamma icc file when loading an exr file by default. 

We could create a setting for that, or or maybe optionally ask the user when they load an exr file (but that would seriously annoy people who have an exr-based workflow).
Comment 2 Halla Rempt 2019-05-01 13:41:41 UTC
Git commit 342b87f3a50947e0f90cb822c40b7e0dfc966cc2 by Boudewijn Rempt.
Committed on 01/05/2019 at 13:40.
Pushed by rempt into branch 'master'.

Add a hidden config option to set the default exr F16/F32 profile

Exr files don't have profiles, and profiles are totally irrelevant
for exr/hdr workflow: the lut docker is what is used in these cases.
But since we need to set a profile on a krita image, let's make it
configurable at least.

Note: there's no gui for this because a) it's an advanced option
and b) we're in string freeze.

CCMAIL:kimageshop@kde.org

M  +4    -2    plugins/impex/exr/exr_converter.cc

https://invent.kde.org/kde/krita/commit/342b87f3a50947e0f90cb822c40b7e0dfc966cc2